--- a/Coronavirus_Feb_2020.ipynb
+++ b/Coronavirus_Feb_2020.ipynb
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1227,26 +1227,25 @@
       "text/plain": [
        "array(['Anhui', 'Beijing', 'Chongqing', 'Fujian', 'Gansu', 'Guangdong',\n",
        "       'Guangxi', 'Guizhou', 'Hainan', 'Hebei', 'Heilongjiang', 'Henan',\n",
-       "       'Hong Kong', 'Hubei', 'Hunan', 'Inner Mongolia', 'Jiangsu',\n",
-       "       'Jiangxi', 'Jilin', 'Liaoning', 'Macau', 'Ningxia', 'Qinghai',\n",
-       "       'Shaanxi', 'Shandong', 'Shanghai', 'Shanxi', 'Sichuan', 'Taiwan',\n",
-       "       'Tianjin', 'Tibet', 'Seattle, WA', 'Xinjiang', 'Yunnan',\n",
-       "       'Zhejiang', nan, 'Chicago, IL', 'Sacramento, CA', 'Tempe, AZ',\n",
-       "       'Toronto, ON', 'New South Wales', 'Victoria, BC', 'Bavaria',\n",
-       "       'British Columbia', 'Queensland', 'South Australia', 'Boston, MA',\n",
-       "       'Los Angeles, CA', 'Orange, CA', 'Santa Clara, CA',\n",
-       "       'San Benito, CA', 'London, ON', 'Madison, WI',\n",
-       "       'Diamond Princess cruise ship', 'San Diego, CA', 'San Antonio, TX'],\n",
-       "      dtype=object)"
+       "       'Hubei', 'Hunan', 'Inner Mongolia', 'Jiangsu', 'Jiangxi', 'Jilin',\n",
+       "       'Liaoning', 'Ningxia', 'Qinghai', 'Shaanxi', 'Shandong',\n",
+       "       'Shanghai', 'Shanxi', 'Sichuan', 'Tianjin', 'Tibet', 'Xinjiang',\n",
+       "       'Yunnan', 'Zhejiang', nan, 'Taiwan', 'Seattle, WA', 'Chicago, IL',\n",
+       "       'Tempe, AZ', 'Macau', 'Hong Kong', 'Toronto, ON',\n",
+       "       'British Columbia', 'Orange, CA', 'Los Angeles, CA',\n",
+       "       'New South Wales', 'Victoria, BC', 'Queensland', 'London, ON',\n",
+       "       'Santa Clara, CA', 'South Australia', 'Boston, MA',\n",
+       "       'San Benito, CA', 'Madison, WI', 'Diamond Princess cruise ship',\n",
+       "       'San Diego, CA', 'San Antonio, TX'], dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_df['Province/State'].unique()"
+    "location_df['Province/State'].unique()"
    ]
   },
   {
@@ -1279,6 +1278,490 @@
    ],
    "source": [
     "main_df['Province/State'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case_df = total_df.rename(columns={\n",
+    "    'Province/State':'StateProvince',\n",
+    "    'Date Only':'Date_reported',\n",
+    "    'Location_ID':'Location_id'   \n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sno</th>\n",
+       "      <th>StateProvince</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Last Update</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Date_reported</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>2/20/20</th>\n",
+       "      <th>Location_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Anhui</td>\n",
+       "      <td>China</td>\n",
+       "      <td>01/22/2020 12:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31.82571</td>\n",
+       "      <td>117.2264</td>\n",
+       "      <td>987.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>China</td>\n",
+       "      <td>01/22/2020 12:00:00</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.18238</td>\n",
+       "      <td>116.4142</td>\n",
+       "      <td>395.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chongqing</td>\n",
+       "      <td>China</td>\n",
+       "      <td>01/22/2020 12:00:00</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>30.05718</td>\n",
+       "      <td>107.8740</td>\n",
+       "      <td>567.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Fujian</td>\n",
+       "      <td>China</td>\n",
+       "      <td>01/22/2020 12:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>26.07783</td>\n",
+       "      <td>117.9895</td>\n",
+       "      <td>293.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Gansu</td>\n",
+       "      <td>China</td>\n",
+       "      <td>01/22/2020 12:00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>36.06110</td>\n",
+       "      <td>103.8343</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sno StateProvince Country          Last Update  Confirmed  Deaths  \\\n",
+       "0    1         Anhui   China  01/22/2020 12:00:00        1.0     0.0   \n",
+       "1    2       Beijing   China  01/22/2020 12:00:00       14.0     0.0   \n",
+       "2    3     Chongqing   China  01/22/2020 12:00:00        6.0     0.0   \n",
+       "3    4        Fujian   China  01/22/2020 12:00:00        1.0     0.0   \n",
+       "4    5         Gansu   China  01/22/2020 12:00:00        0.0     0.0   \n",
+       "\n",
+       "   Recovered Date_reported      Time  Unnamed: 0       Lat      Long  2/20/20  \\\n",
+       "0        0.0    01/22/2020  12:00:00         0.0  31.82571  117.2264    987.0   \n",
+       "1        0.0    01/22/2020  12:00:00         1.0  40.18238  116.4142    395.0   \n",
+       "2        0.0    01/22/2020  12:00:00         2.0  30.05718  107.8740    567.0   \n",
+       "3        0.0    01/22/2020  12:00:00         3.0  26.07783  117.9895    293.0   \n",
+       "4        0.0    01/22/2020  12:00:00         4.0  36.06110  103.8343     91.0   \n",
+       "\n",
+       "   Location_id  \n",
+       "0          1.0  \n",
+       "1          2.0  \n",
+       "2          3.0  \n",
+       "3          4.0  \n",
+       "4          5.0  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "case_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del case_df['Unnamed: 0']\n",
+    "del case_df['Time']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del case_df['Last Update']\n",
+    "del case_df['Sno']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>StateProvince</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Date_reported</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>2/20/20</th>\n",
+       "      <th>Location_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Anhui</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>31.82571</td>\n",
+       "      <td>117.2264</td>\n",
+       "      <td>987.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>China</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>40.18238</td>\n",
+       "      <td>116.4142</td>\n",
+       "      <td>395.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Chongqing</td>\n",
+       "      <td>China</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>30.05718</td>\n",
+       "      <td>107.8740</td>\n",
+       "      <td>567.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fujian</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>26.07783</td>\n",
+       "      <td>117.9895</td>\n",
+       "      <td>293.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gansu</td>\n",
+       "      <td>China</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>36.06110</td>\n",
+       "      <td>103.8343</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  StateProvince Country  Confirmed  Deaths  Recovered Date_reported       Lat  \\\n",
+       "0         Anhui   China        1.0     0.0        0.0    01/22/2020  31.82571   \n",
+       "1       Beijing   China       14.0     0.0        0.0    01/22/2020  40.18238   \n",
+       "2     Chongqing   China        6.0     0.0        0.0    01/22/2020  30.05718   \n",
+       "3        Fujian   China        1.0     0.0        0.0    01/22/2020  26.07783   \n",
+       "4         Gansu   China        0.0     0.0        0.0    01/22/2020  36.06110   \n",
+       "\n",
+       "       Long  2/20/20  Location_id  \n",
+       "0  117.2264    987.0          1.0  \n",
+       "1  116.4142    395.0          2.0  \n",
+       "2  107.8740    567.0          3.0  \n",
+       "3  117.9895    293.0          4.0  \n",
+       "4  103.8343     91.0          5.0  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "case_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case_df.to_csv('case_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case_cols = ['Location_id','Date_reported','StateProvince', 'Country', 'Confirmed','Deaths','Recovered']\n",
+    "case_db = case_df[case_cols].copy()\n",
+    "case_db.set_index('Location_id',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date_reported</th>\n",
+       "      <th>StateProvince</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Location_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>Anhui</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>Beijing</td>\n",
+       "      <td>China</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.0</th>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>Chongqing</td>\n",
+       "      <td>China</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.0</th>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>Fujian</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5.0</th>\n",
+       "      <td>01/22/2020</td>\n",
+       "      <td>Gansu</td>\n",
+       "      <td>China</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date_reported StateProvince Country  Confirmed  Deaths  Recovered\n",
+       "Location_id                                                                  \n",
+       "1.0            01/22/2020         Anhui   China        1.0     0.0        0.0\n",
+       "2.0            01/22/2020       Beijing   China       14.0     0.0        0.0\n",
+       "3.0            01/22/2020     Chongqing   China        6.0     0.0        0.0\n",
+       "4.0            01/22/2020        Fujian   China        1.0     0.0        0.0\n",
+       "5.0            01/22/2020         Gansu   China        0.0     0.0        0.0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "case_db.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'create_engine' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-b8dd24c51ba0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mrds_connection_string\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"postgres:tklovesbo@localhost:5434/Novel Coronavirus\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mengine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'postgresql://{rds_connection_string}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'create_engine' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "rds_connection_string = \"postgres:tklovesbo@localhost:5434/Novel Coronavirus\"\n",
+    "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
   {
