--- a/Coronavirus_Feb_2020.ipynb
+++ b/Coronavirus_Feb_2020.ipynb
@@ -1782,7 +1782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_connection_string = \"postgres:tklovesbo@localhost:5434/Novel_Coronavirus\"\n",
+    "rds_connection_string = \"postgres:*******@localhost:5434/Novel_Coronavirus\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
